--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.6.1",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "pdf-lib": "^1.17.1"
   }
 }
