--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -8,12 +8,11 @@ on:
 
 jobs:
   ci:
-    name: Lint • Test
+    name: Install • Test
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Node.js 18.x
         uses: actions/setup-node@v4
@@ -22,9 +21,6 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
-      - name: Lint code
-        run: npm run lint
 
       - name: Run tests
         env:
@@ -37,8 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && success()
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Deploy to Render
         uses: render-examples/deploy@v1
