--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   ci:
-    name: Install • Test
+    name: Install only
     runs-on: ubuntu-latest
 
     steps:
@@ -21,11 +21,6 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
-      - name: Run tests
-        env:
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
-        run: npm test
 
   deploy:
     name: Deploy to Render
