--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -2,8 +2,9 @@ name: Backend CI/CD
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   install:
